--- a/README.org
+++ b/README.org
@@ -16,8 +16,8 @@ behavior models:
 
 - [[https://jdk.java.net][Java Development Kit (version 11+)]]
 - [[https://clojure.org/guides/getting_started][Clojure CLI tools]]
-- [[https://www.postgresql.org/download][Postgresql]]
-- [[https://postgis.net/install][PostGIS]]
+- [[https://www.postgresql.org/download][Postgresql (version 11?)]]
+- [[https://postgis.net/install][PostGIS (version 3)]]
 
 ** Environment Variable Setup
 
