--- a/notes/geoserver.org
+++ b/notes/geoserver.org
@@ -35,21 +35,21 @@ editing the allowedOrigins param.
 
 *** Enable SSL/HTTPS
 
-The GeoServer v2.16 seems to have mix-matched versions of the required http and
+The GeoServer v2.16 seems to have mismatched versions of the required https and
 ssl files. To correct this, download the Jetty distribution file. This example uses:
 https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-distribution/9.2.13.v20150730/
 Copy the following files from the archive to the coresponding GeoServer directory
 
-- /modules/ssl.mod
-- /etc/jetty-https.xml
-- /etc/jetty-ssl.xml
+- $GEOSERVER_HOME/modules/ssl.mod
+- $GEOSERVER_HOME/etc/jetty-https.xml
+- $GEOSERVER_HOME/etc/jetty-ssl.xml
 
 Edit ssl.mod and jetty-ssl.xml to use the correct values for keystore location and
 password.
 
 Edit jetty-https.xml, jetty-ssl.xml, and jetty.xml to update https port.
 
-Add the following to /start.ini
+Add the following to $GEOSERVER_HOME/start.ini
 #+begin_src sh
 --module=ssh
 --module=https
