--- a/notes/geoserver.org
+++ b/notes/geoserver.org
@@ -56,6 +56,7 @@ Copy the following files from the archive to the coresponding GeoServer director
 - $GEOSERVER_HOME/etc/jetty-https.xml
 - $GEOSERVER_HOME/etc/jetty-ssl.xml
 - $GEOSERVER_HOME/etc/jetty-ssl-context.xml
+- $GEOSERVER_HOME/etc/jetty-ssl-context-reload.xml
 
 Edit jetty-ssl-context.xml to use the correct values for keystore location and
 password.
@@ -65,5 +66,6 @@ Edit jetty-ssl.xml, and jetty.xml to update https port.
 Add the following to $GEOSERVER_HOME/start.ini
 #+begin_src sh
 --module=ssl
+--module=ssl-reload
 --module=https
 #+end_src
