--- a/README.org
+++ b/README.org
@@ -167,11 +167,11 @@ replacing the values with your own:
 
 ** Enabling https
 
-If you have not already created a SSL certificate, you must start the server in
-"dev" mode to complete the following steps.
+If you have not already created a SSL certificate, you must start the server
+without a https port specified.
 
 #+begin_src sh
-clojure -M:run-server port dev
+clojure -M:run-server
 #+end_src
 
 To automatically create an SSL certificate signed by [[https://letsencrypt.org][Let's Encrypt]],
@@ -227,24 +227,20 @@ To compile and run the web application, navigate to the toplevel
 project directory and run:
 
 #+begin_src sh
-clojure -M:run-server [port] [dev|prod]
+clojure -M:build-db only-functions
+clojure -M:run-server -m [dev|prod] [-p 8080] [-P 8443]
 #+end_src
 
-By default, the website will then be available at https://localhost:8443
-or on whichever port you specified. In dev mode, server-side exceptions will
+The website will then be available at http://localhost:8080 unless a
+port is specified. An http port can be specified with -p and an https
+port can be specified with -P. In dev mode, server-side exceptions will
 be displayed in the browser and Clojure source files will be reloaded
 whenever you refresh the page. These features are disabled in prod
 mode. If the second argument to run-server is omitted, it will default
 to prod mode.
 
-If you don't already have an SSL certificate, you must run in "dev" mode:
-
-#+begin_src sh
-clojure -M:run-server port dev
-#+end_src
-
-This will start a webserver on http://localhost:8080 or on whichever port
-you specified.
+If you don't already have an SSL certificate, you cannot specify a https
+port.
 
 ** License and Distribution
 
