--- a/README.org
+++ b/README.org
@@ -167,8 +167,8 @@ replacing the values with your own:
 
 ** Enabling https
 
-If you have not already created a SSL certificate, you must start the server
-without a https port specified.
+If you have not already created an SSL certificate, you must start the
+server without an https port specified.
 
 #+begin_src sh
 clojure -M:run-server
@@ -233,14 +233,13 @@ clojure -M:run-server -m [dev|prod] [-p 8080] [-P 8443]
 
 The website will then be available at http://localhost:8080 unless a
 port is specified. An http port can be specified with -p and an https
-port can be specified with -P. In dev mode, server-side exceptions will
-be displayed in the browser and Clojure source files will be reloaded
-whenever you refresh the page. These features are disabled in prod
-mode. If the second argument to run-server is omitted, it will default
-to prod mode.
+port can be specified with -P. In dev mode, server-side exceptions
+will be displayed in the browser and Clojure source files will be
+reloaded whenever you refresh the page. These features are disabled in
+prod mode. If -m is unspecified, it will default to prod mode.
 
-If you don't already have an SSL certificate, you cannot specify a https
-port.
+If you don't already have an SSL certificate, you cannot specify an
+https port.
 
 ** License and Distribution
 
