Added missing comma in README.org.

--- a/README.org
+++ b/README.org
@@ -244,10 +244,10 @@ port.
 
 *** Maintaining Daily Logs
 
-By default the server will log to standard out. If you would like to have
-the system log to YYYY-DD-MM.log use the -o option to specify an output path.
-You can either specify a path relative to the toplevel directory of
-this repository or an absolute path on your filesystem.
+By default the server will log to standard out. If you would like to
+have the system log to YYYY-DD-MM.log, use the -o option to specify an
+output path. You can either specify a path relative to the toplevel
+directory of this repository or an absolute path on your filesystem.
 
 ** License and Distribution
 
