--- a/README.org
+++ b/README.org
@@ -191,7 +191,7 @@ To automatically create an SSL certificate signed by [[https://letsencrypt.org][
 simply run the following command from your shell:
 
 #+begin_src sh
-clojure -M:certbot-init mydomain.com [certbot-dir]
+clojure -M:https --certbot-init -d mydomain.com [-p certbot-dir]
 #+end_src
 
 Note: If your certbot installation stores its config files in a
@@ -211,7 +211,7 @@ this repackaging step manually, simply run this command from your
 shell:
 
 #+begin_src sh
-clojure -M:package-cert mydomain.com [certbot-dir]
+clojure -M:https --package-cert -d mydomain.com [-p certbot-dir]
 #+end_src
 
 Certbot runs as a background task every 12 hours and will renew any
